--- a/AllKindsDemo/Info.plist
+++ b/AllKindsDemo/Info.plist
@@ -2,6 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundleAlternateIcons</key>
+		<dict>
+			<key>another</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>another</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+		</dict>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -16,14 +31,14 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
-    <key>NSCameraUsageDescription</key>
-    <string>此 App 需要您的同意才能使用相机</string>
-    <key>NSContactsUsageDescription</key>
-    <string>此 App 需要您的同意才能读取联系人</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>此 App 需要您的同意才能使用麦克风</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>此 App 需要您的同意才能读取相册</string>
+	<key>NSCameraUsageDescription</key>
+	<string>此 App 需要您的同意才能使用相机</string>
+	<key>NSContactsUsageDescription</key>
+	<string>此 App 需要您的同意才能读取联系人</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>此 App 需要您的同意才能使用麦克风</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>此 App 需要您的同意才能读取相册</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
